@@ -19,6 +19,9 @@ Release 0.9.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-843: implements COALESCE for BOOLEAN, DATE, TIME, TIMESTAMP. 
+    (Hyoungjun Kim via hyunsik)
+
     TAJO-854: Supports INSERT INTO with UNION. (Hyoungjun Kim via jihoon)
 
     TAJO-793: CLI should be able to exit when single query is failed.
